--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </style>
 </head>
 <body>
-    <p>Hola mundo mundo</p>
+    <div class="container">
+        <h1>Joyerías AFN</h1>
+    </div>
 </body>
 </html>
