--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Joyerias Afn</title>
     <style>
         p{
-            color: red;
+            color: green;
         }
     </style>
 </head>
