--- a/index.html
+++ b/index.html
@@ -4,15 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyerias Afn</title>
-    <style>
-        p{
-            color: green;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Joyerías AFN</h1>
+        <div class="row">
+            <div class="logo">
+                <img src="assets/images/logo.svg" alt="" class="logo__src">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col col-md-4">
+                <div class="card homeProducts__card">
+                    <img src="assets/images/one.png" alt="" class="homeProducts__img">
+                </div>
+            </div>
+            <div class="col col-md-4">
+                <div class="card homeProducts__card">
+                    <img src="assets/images/one.png" alt="" class="homeProducts__img">
+                </div>
+            </div>
+            <div class="col col-md-4">
+                <div class="card homeProducts__card">
+                    <img src="assets/images/one.png" alt="" class="homeProducts__img">
+                </div>
+            </div>
+            <div class="col col-md-4">
+                <div class="card homeProducts__card">
+                    <img src="assets/images/one.png" alt="" class="homeProducts__img">
+                </div>
+            </div>
+            <div class="col col-md-4">
+                <div class="card homeProducts__card">
+                    <img src="assets/images/one.png" alt="" class="homeProducts__img">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
