--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="logo">
-                <img src="assets/images/logo.svg" alt="" class="logo__src">
+                <img src="assets/images/logo.png" alt="" class="logo__src">
             </div>
         </div>
         <div class="row">
