--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col col-md-4">
                 <div class="card homeProducts__card">
-                    <img src="assets/images/one.png" alt="" class="homeProducts__img">
+                    <img src="assets/images/two.png" alt="" class="homeProducts__img">
                 </div>
             </div>
             <div class="col col-md-4">
