--- a/catalogo/index.html
+++ b/catalogo/index.html
@@ -11,6 +11,15 @@
             direction: ltr;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159181731-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-159181731-1');
+    </script>
 </head>
 <body>
     <script src="pdf.js"></script>
