--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joyerias Afn</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159181731-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-159181731-1');
+    </script>
 </head>
 <body>
     <div class="container">
